--- a/src/views/athletes/Athlete.module.scss
+++ b/src/views/athletes/Athlete.module.scss
@@ -1,6 +1,7 @@
 .container{
   display: flex;
-  gap: 1.5rem;
-  padding: 1rem 0;
-  flex-wrap: wrap;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem 0; 
+
 }
