--- a/src/views/teams/teamDetails/subviews/profileDetails/ProfileDetails.module.scss
+++ b/src/views/teams/teamDetails/subviews/profileDetails/ProfileDetails.module.scss
@@ -146,3 +146,14 @@
     width: 100%;
   }
 }
+
+.imageContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 1rem;
+
+  @include mobile {
+    justify-content: center;
+  }
+}
