--- a/src/views/users/userDetails/subviews/planInformation/PlanInformation.module.scss
+++ b/src/views/users/userDetails/subviews/planInformation/PlanInformation.module.scss
@@ -35,7 +35,7 @@
 
   h4 {
     margin: 0 0 12px 0;
-    font-weight: 600; 
+    font-weight: 600;
   }
 
   .featuresList {
@@ -45,15 +45,31 @@
   }
 }
 
+.planDescription {
+  background: var(--color-background-secondary);
+  padding: 12px;
+  border-radius: 6px;
+  border-left: 3px solid var(--color-primary);
+  font-size: 14px;
+  line-height: 1.5;
+  color: var(--color-text-secondary);
+}
+
+.availableToList {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 6px;
+}
+
 .emptyDescription {
   text-align: center;
 
   p {
-    margin: 0 0 8px 0; 
+    margin: 0 0 8px 0;
   }
 
   .subText {
-    font-size: 14px; 
+    font-size: 14px;
   }
 }
 
@@ -81,11 +97,11 @@
   .planDetails {
     h4 {
       margin: 0 0 4px 0;
-      font-weight: 600; 
+      font-weight: 600;
     }
 
     p {
-      margin: 0; 
+      margin: 0;
       font-size: 14px;
       font-style: italic;
     }
